--- a/an-mda-report.html
+++ b/an-mda-report.html
@@ -10,6 +10,13 @@
 <script type="text/javascript">
   // Put your javascript functions here
 
+  function greaterOf(a, b) {
+    if (isNaN(a) && isNaN(b)) return "-";
+    if (isNaN(a)) return b;
+    if (isNaN(b)) return a;
+    return Math.max(a, b);
+  }
+
   // Defining these values here because form creation error isn't saving report parameter settings
   const period = dhis2.report.periods[0] || "THIS_YEAR";
   const orgUnit = dhis2.report.organisationUnit.length
@@ -77,6 +84,8 @@
 
   // If cell definitions are not manually defined, they are estimated based on row / title info
   // `dn` is "dimensionName"
+  // `customLogic`: a function that should return the value for the cell. Receives its index and the current row array as arguments: customLogic: (idx, row) => {...}
+  // Custom logic will be called while the cells are being populated with data; it will only have access to previous cells in the tabl.
   const rows = [
     // Endemicity
     { name: "Endemicity", type: rowTypes.CATEGORY },
@@ -393,7 +402,7 @@
       name: "Epidemiological Coverage",
       type: rowTypes.PROGRAM_INDICATOR,
       cells: [
-        { dn: "Oops! I cause a division by zero error." },
+        { value: "Oops! I cause a division by zero error." },
         { dn: "LFMDA - Epidemiological Coverage" },
         { dn: "OMDA - Epidemiological Coverage Round 1" },
         { dn: "OMDA - Epidemiological Coverage Round 2" },
@@ -685,7 +694,7 @@
           dn:
             "OMDA - IU supported with NTD MDA treatment planning and coordination Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => greaterOf(row[idx-1].value, row[idx-2].value) },
         {
           dn:
             "SCMDA - IU supported with NTD MDA treatment planning and coordination Round 1",
@@ -694,7 +703,7 @@
           dn:
             "SCMDA - IU supported with NTD MDA treatment planning and coordination Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => greaterOf(row[idx-1].value, row[idx-2].value) },
         {
           dn:
             "STMDA - IU supported with NTD MDA treatment planning and coordination Round 1",
@@ -703,7 +712,7 @@
           dn:
             "STMDA - IU supported with NTD MDA treatment planning and coordination Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => greaterOf(row[idx-1].value, row[idx-2].value) },
         null,
       ],
     },
@@ -731,7 +740,7 @@
           dn:
             "OMDA - IUs where MDA treatment coverage was verified and addressed using SCT Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
         {
           dn:
             "SCMDA - IUs where MDA treatment coverage was verified and addressed using SCT Round 1",
@@ -740,7 +749,7 @@
           dn:
             "SCMDA - IUs where MDA treatment coverage was verified and addressed using SCT Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
         {
           dn:
             "STMDA - IUs where MDA treatment coverage was verified and addressed using SCT Round 1",
@@ -749,8 +758,8 @@
           dn:
             "STMDA - IUs where MDA treatment coverage was verified and addressed using SCT Round 2",
         },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
-        { customLogic: () => console.log("Hello! I'm custom logic.") }, // TODO: sum
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." }, // TODO: sum
       ],
     },
     {
@@ -761,14 +770,14 @@
         { dn: "LFMDA - IUs not meeting the cut-off value for SCT" },
         { dn: "OMDA - IUs not meeting the cut-off value for SCT Round 1" },
         { dn: "OMDA - IUs not meeting the cut-off value for SCT Round 2" },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
         { dn: "SCMDA - IUs not meeting the cut-off value for SCT Round 1" },
         { dn: "SCMDA - IUs not meeting the cut-off value for SCT Round 2" },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
         { dn: "STMDA - IUs not meeting the cut-off value for SCT Round 1" },
         { dn: "STMDA - IUs not meeting the cut-off value for SCT Round 2" },
-        { customLogic: () => console.log("Hello! I'm custom logic.") },
-        { customLogic: () => console.log("Hello! I'm custom logic.") }, // No sum?
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." },
+        { customLogic: (idx, row) => "Hello! Custom logic goes here." }, // No sum?
       ],
     },
     {
