--- a/an-mda-report.html
+++ b/an-mda-report.html
@@ -5,6 +5,16 @@
   th[scope="row"]:not([colspan]) {
     font-weight: normal;
   }
+
+  /* THIS IS HARD-CODED AND NEEDS CHANGING IF COLUMNS CHANGE */
+  /* Stripe columns 2, 4-6, 10-12. (simply even for top header row) */
+  tr#header-row-top > *:nth-child(even),
+  tr:not(#header-row-top) > *:nth-child(2),
+  tr:not(#header-row-top) > *:nth-child(n+4):nth-child(-n+6),
+  tr:not(#header-row-top) > *:nth-child(n+10):nth-child(-n+12) {
+    background-color: #fafafa;
+  }
+
 </style>
 
 <script type="text/javascript">
@@ -308,7 +318,7 @@
           dn: "STMDA - Population eligible for MDA treatment Total",
         },
         {
-          dn: "MDA - Total population eligible for MDA treatment of IU",
+          dn: "MDA - Total Population eligible for MDA treatment of IU",
         },
       ],
     },
@@ -334,7 +344,7 @@
         },
         {
           dn:
-            "OMDA - Total estimated size of populations with high risk of infection",
+            "OMDA - Total Estimated size of populations with high risk of infection",
         },
         {
           dn:
@@ -346,7 +356,7 @@
         },
         {
           dn:
-            "SCMDA - Total estimated size of populations with high risk of infection",
+            "SCMDA - Total Estimated size of populations with high risk of infection",
         },
         {
           dn:
@@ -358,7 +368,7 @@
         },
         {
           dn:
-            "STMDA - Total estimated size of populations with high risk of infection",
+            "STMDA - Total Estimated size of populations with high risk of infection",
         },
         {
           dn:
@@ -406,11 +416,14 @@
       ],
     },
     {
-      // Same "division" error as above b/c TCMDA and LFMDA
       name: "Epidemiological Coverage",
       type: rowTypes.PROGRAM_INDICATOR,
       cells: [
-        { value: "Oops! I cause a division by zero error." },
+        { 
+          // Division by zero error in database:
+          // dn: "TCMDA - Epidemiological Coverage"
+          value: "Oops! I cause a division by zero error."
+        },
         { dn: "LFMDA - Epidemiological Coverage" },
         { dn: "OMDA - Epidemiological Coverage Round 1" },
         { dn: "OMDA - Epidemiological Coverage Round 2" },
@@ -548,11 +561,11 @@
             "STMDA - Total MDA treatments distributed to high risk populations",
         },
         {
-          dn: "MDA - Total MDA treatments distributed to high risk populations",
+          // dn: "MDA - Total MDA treatments distributed to high risk populations",
+          value: "Oops! I cause a server error: 'java.lang.Long cannot be cast to java.lang.Double' (dimension name 'MDA - Total MDA treatments distributed to high risk populations')"
         },
       ],
     },
-    // Display name: "Number of PC treatments provided per IU (per disease)"
     {
       name: "Number of PC treatments provided per IU",
       type: rowTypes.PROGRAM_INDICATOR,
@@ -675,7 +688,6 @@
           dn:
             "STMDA - Total People, in population eligible for treatment, not receiving MDA treatment",
         },
-        // Additional space here
         {
           dn:
             "MDA - Total People, in population eligible for treatment, not receiving MDA treatment",
@@ -794,7 +806,7 @@
               row[7].value,
               row[10].value
             ),
-        }, // TODO: sum
+        },
       ],
     },
     {
@@ -830,7 +842,7 @@
               row[7].value,
               row[10].value
             ),
-        }, // No sum?
+        },
       ],
     },
     {
@@ -838,14 +850,56 @@
         "Number of evaluation areas where mob-up activites were conducted following a SCT",
       dnBase: "",
       type: rowTypes.PROGRAM_INDICATOR,
-      cells: [], // Todo
+      // Todo
+      cells: [
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { customLogic: (idx, row) => sumOf(
+              row[0].value,
+              row[1].value,
+              row[4].value,
+              row[7].value,
+              row[10].value
+            ), },
+      ],
     },
     {
       name:
         "Number of IUs for which independent representative coverage surveys according to WHO guidelines were completed",
       dnBase: "",
       type: rowTypes.PROGRAM_INDICATOR,
-      cells: [], // Todo
+      cells: [
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value), },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value), },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value), },
+        { customLogic: (idx, row) => sumOf(
+              row[0].value,
+              row[1].value,
+              row[4].value,
+              row[7].value,
+              row[10].value
+            ), },
+      ],
     },
 
     // LNOB
@@ -855,8 +909,20 @@
         "Number of people from marginilized groups (LNOB) who received NTD MDA treatment",
       dnBase: "",
       type: rowTypes.PROGRAM_INDICATOR,
-      cells: [], // TODO
-      // Grand total: { dn: "MDA - Total people from marginalized groups (LNOB) who received NTD MDA treatment"}
+      cells: [
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: null, value: "todo" },
+        { dn: "MDA - Total people from marginalized groups (LNOB) who received NTD MDA treatment"}
+      ]
     },
   ]; // End row definitions
 
