--- a/an-mda-report.html
+++ b/an-mda-report.html
@@ -10,11 +10,10 @@
   /* Stripe columns 2, 4-6, 10-12. (simply even for top header row) */
   tr#header-row-top > *:nth-child(even),
   tr:not(#header-row-top) > *:nth-child(2),
-  tr:not(#header-row-top) > *:nth-child(n+4):nth-child(-n+6),
-  tr:not(#header-row-top) > *:nth-child(n+10):nth-child(-n+12) {
+  tr:not(#header-row-top) > *:nth-child(n + 4):nth-child(-n + 6),
+  tr:not(#header-row-top) > *:nth-child(n + 10):nth-child(-n + 12) {
     background-color: #fafafa;
   }
-
 </style>
 
 <script type="text/javascript">
@@ -100,10 +99,25 @@
     dimensionsToQuery: [],
   };
 
-  // If cell definitions are not manually defined, they are estimated based on row / title info
-  // `dn` is "dimensionName"
-  // `customLogic`: a function that should return the value for the cell. Receives its index and the current row array as arguments: customLogic: (idx, row) => {...}
-  // Custom logic will be called while the cells are being populated with data; it will only have access to previous cells in the tabl.
+  /**
+   * Row and cell definitions:
+   * This is where to define the contents of cells in the table.
+   *
+   * The `dn` property is short for `dimensionName`: 
+   * If you provide a dimension name, the dimension ID will be looked up and the cell value will be populated
+   * according to the result of an analytics query.
+   * Currently (17 July 2020), only Indicators and Program Indicators can be looked up by name,
+   * but these can be expanded (see `getAllDimensions()`).
+   *
+   * To populate a cell with custom logic, provide a function for the `customLogic` property:
+   * It will be called during table population with data. It should return the value that will be the final cell value.
+   * The function receives its index and the current row of cells to use for calculations,
+   * e.g. `customLogic: (idx, row) => { console.log(row[idx-1].value) }` -> Logs value of previous cell
+   * `sumOf()` and `greatestOf()` are helper functions that may be useful for custom logic;
+   * they receive any number of arguments and only operate on numbers, ignoring non-number cell values.
+   *
+   * You can also hard-code the value of the cell with the `value` property of the cell.
+   */
   const rows = [
     // Endemicity
     { name: "Endemicity", type: rowTypes.CATEGORY },
@@ -419,10 +433,10 @@
       name: "Epidemiological Coverage",
       type: rowTypes.PROGRAM_INDICATOR,
       cells: [
-        { 
+        {
           // Division by zero error in database:
           // dn: "TCMDA - Epidemiological Coverage"
-          value: "Oops! I cause a division by zero error."
+          value: "Oops! I cause a division by zero error.",
         },
         { dn: "LFMDA - Epidemiological Coverage" },
         { dn: "OMDA - Epidemiological Coverage Round 1" },
@@ -562,7 +576,8 @@
         },
         {
           // dn: "MDA - Total MDA treatments distributed to high risk populations",
-          value: "Oops! I cause a server error: 'java.lang.Long cannot be cast to java.lang.Double' (dimension name 'MDA - Total MDA treatments distributed to high risk populations')"
+          value:
+            "Oops! I cause a server error: 'java.lang.Long cannot be cast to java.lang.Double' (dimension name 'MDA - Total MDA treatments distributed to high risk populations')",
         },
       ],
     },
@@ -863,13 +878,16 @@
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
-        { customLogic: (idx, row) => sumOf(
+        {
+          customLogic: (idx, row) =>
+            sumOf(
               row[0].value,
               row[1].value,
               row[4].value,
               row[7].value,
               row[10].value
-            ), },
+            ),
+        },
       ],
     },
     {
@@ -882,23 +900,32 @@
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
-        { customLogic: (idx, row) =>
-            greatestOf(row[idx - 1].value, row[idx - 2].value), },
+        {
+          customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value),
+        },
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
-        { customLogic: (idx, row) =>
-            greatestOf(row[idx - 1].value, row[idx - 2].value), },
+        {
+          customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value),
+        },
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
-        { customLogic: (idx, row) =>
-            greatestOf(row[idx - 1].value, row[idx - 2].value), },
-        { customLogic: (idx, row) => sumOf(
+        {
+          customLogic: (idx, row) =>
+            greatestOf(row[idx - 1].value, row[idx - 2].value),
+        },
+        {
+          customLogic: (idx, row) =>
+            sumOf(
               row[0].value,
               row[1].value,
               row[4].value,
               row[7].value,
               row[10].value
-            ), },
+            ),
+        },
       ],
     },
 
@@ -921,8 +948,11 @@
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
         { dn: null, value: "todo" },
-        { dn: "MDA - Total people from marginalized groups (LNOB) who received NTD MDA treatment"}
-      ]
+        {
+          dn:
+            "MDA - Total people from marginalized groups (LNOB) who received NTD MDA treatment",
+        },
+      ],
     },
   ]; // End row definitions
 
@@ -1131,7 +1161,7 @@
   });
 </script>
 
-<!-- Bootstrap test -->
+<!-- Bootstrap stylesheet -->
 <link
   rel="stylesheet"
   href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
@@ -1140,21 +1170,7 @@
 />
 
 <div>
-  <!-- Put your HTML mark-up here -->
-
-  <h4>Notes:</h4>
-  <p>
-    So we can make sure we're querying the right things, "dimension not found"
-    indicates fields that weren't found in the lists of indicators or program
-    indicators. Of course, some of them should be blank in the end.
-  </p>
-  <p>
-    A cell showing "-" means that the dimension <em>was</em> found, but no data
-    was found for it in the database.
-  </p>
-
-  <hr />
-
+  <!-- HTML Markup to make up report -->
   <h1>MDA Treatment Summary</h1>
 
   <div class="form-group">
@@ -1182,6 +1198,13 @@
       <option value="zzkzrWcJnfM">ZZ TEST</option>
     </select>
   </div>
+
+  <p>
+    <em
+      >A cell showing "-" means that no value exists in the database for that
+      dimension.</em
+    >
+  </p>
 
   <p id="loading">Loading...</p>
 
