division by zero error fixed

--- a/mda-report.html
+++ b/mda-report.html
@@ -436,11 +436,7 @@
       name: "Epidemiological Coverage",
       type: rowTypes.PROGRAM_INDICATOR,
       cells: [
-        {
-          // Division by zero error in database:
-          // dn: "TCMDA - Epidemiological Coverage"
-          value: "Oops! I cause a division by zero error.",
-        },
+        { dn: "TCMDA - Epidemiological Coverage" },
         { dn: "LFMDA - Epidemiological Coverage" },
         { dn: "OMDA - Epidemiological Coverage Round 1" },
         { dn: "OMDA - Epidemiological Coverage Round 2" },
